[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloudtipsadp"
version = "0.1.4"
authors = [
  { name="setter", email="lphp@mail.ru" },
]
description = "CloudTips Adapter - integration module with API CloudPayments."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SETTER2000/cloudtips-adp"
"Bug Tracker" = "https://github.com/SETTER2000/cloudtips-adp/issues"